# codex

./: .gitignore  CLAUDE.md  DEPLOY.md  DEPLOYMENT_DOCKER.md  DEPLOYMENT_SETUP_COMPLETE.md  DEVELOPMENT.md  DOCKER_SETUP_COMPLETE.md  FLASK_VS_FASTAPI.md  FRONTEND_TESTS.md  IDEAS.md  PHASE_1_1_COMPLETE.md  PHASE_1_2_COMPLETE.md  PHASE_1_3_COMPLETE.md  PHASE_2_1_COMPLETE.md  PHASE_2_2_COMPLETE.md  PHASE_2_3_COMPLETE.md  PHASE_2_4_COMPLETE.md  PHASE_3_1_COMPLETE.md  PHASE_3_2_COMPLETE.md  README.md  SQLITE_MIGRATION_PLAN.md  TESTING_SETUP.md  TEST_COMMANDS.md  TYPE_CHECKING_SETUP.md  TYPE_ERRORS_FIXED.md  VALIDATION_COMPLETE.md  dev.sh  fetch-app-logs.sh  fetch-logs.sh  test.sh  wait-for-ci.sh
.github/: dependabot.yml
backend/: .coveragerc  .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  coverage.xml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run_tests.sh
backend/app/: main.py  migrate.py  repository.py  sqlite_storage.py  storage.py
backend/tests/: test_app.py  test_code_repository.py  test_config.py  test_cors.py  test_dual_auth.py  test_dual_write.py  test_e2e.py  test_events.py  test_frontend_e2e.py  test_get_code.py  test_get_logs.py  test_log_migration.py  test_log_validation.py  test_login_flow.py  test_migrate.py  test_playwright_example.py  test_proxy.py  test_rate_limiting.py  test_ritalin_events.py  test_sqlite_storage.py  test_token_generation.py  test_token_validation.py
docs/: AUTOMATED_DEPLOYMENT_SETUP.md  DEPLOYMENT.md  DEVELOPMENT.md  EVENT_LOG_PLAN.md  IDEAS.md  IMPLEMENTATION_PLAN.md  (+7 more)
(+28 files in other folders)
