[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "flask==3.1.3",
    "flask-cors>=6.0.2",
    "flask-limiter>=4.1.1",
    "gunicorn>=25.0.3",
    "pydantic>=2.12.5",
    "pytest==9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-playwright>=0.7.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
