[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "flask==3.1.3",
    "flask-cors>=6.0.2",
    "flask-limiter>=4.1.1",
    "gunicorn>=26.0.0",
    "pydantic>=2.13.4",
    "pytest==9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.7.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "ty>=0.0.37",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["app", "tests"]
pythonVersion = "3.14"
